tests/snapshots/regression-fighters-launched_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Thanatos
ship/maxTargetsCharacter                     = 0.000000
ship/upgradeFree                             = 400.000000
ship/fighterTubesUsed                        = 2.000000
ship/fighterSupportSlotsUsed                 = 1.000000
ship/fighterLightSlotsUsed                   = 1.000000
ship/fighterDamagePerSecond                  = 137.872341
ship/fighterCapacityLoad                     = 15000.000000
ship/scanStrength                            = 76.000000
ship/passiveShieldEffectiveRechargeRate      = 12.758621
ship/passiveShieldRechargeRate               = 9.250000
ship/ehp                                     = 304141.551452
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 76551.723194
ship/hullEhp                                 = 124626.862567
ship/armorEhp                                = 102962.965691
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/damagePerSecondWithReload               = 137.872341
ship/damagePerSecondWithoutReload            = 137.872341
ship/powerFree                               = 610000.000000
ship/cpuFree                                 = 650.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 32.738095
ship/capacitorPeakRecharge                   = 32.738095
ship/alignTime                               = 65.959887
ship/powerLoad                               = 90000.000000
ship/cpuLoad                                 = 75.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusCarrierG1                      = 0.000000
ship/shipBonusCarrierG2                      = 0.000000
ship/shipBonusCarrierG3                      = 0.000000
ship/shipBonusCarrierG4                      = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000
ship/shipBonusCarrierG5                      = 0.000000

high_1/type  = Fighter Support Unit II
high_1/state = online

fightertube_1/type               = Dromi II
fightertube_1/state              = active
fightertube_1/maxVelocity        = 788.639957
fightertube_1/shieldCapacity     = 7949.999571
fightertube_1/shieldRechargeRate = 2067999.994755

fightertube_2/type                                       = Templar II
fightertube_2/state                                      = active
fightertube_2/fighterAbilityAttackMissileDamagePerSecond = 22.978723
fightertube_2/damagePerSecondWithReload                  = 22.978723
fightertube_2/damagePerSecondWithoutReload               = 22.978723
fightertube_2/maxVelocity                                = 919.019950
fightertube_2/shieldCapacity                             = 3847.799792
fightertube_2/shieldRechargeRate                         = 657999.998331
fightertube_2/fighterAbilityMissilesDuration             = 13159.999967
fightertube_2/fighterAbilityAttackMissileDuration        = 4699.999988

ship                           = skill Capital Ships needs 4 has 0
ship                           = skill Gallente Carrier needs 1 has 0
ship                           = skill Advanced Spaceship Command needs 5 has 0
ship                           = skill Gallente Battleship needs 3 has 0
ship                           = skill Drone Interfacing needs 5 has 0
ship                           = skill Jump Fuel Conservation needs 4 has 0
ship                           = skill Jump Drive Calibration needs 3 has 0
ship                           = skill Spaceship Command needs 5 has 0
ship                           = skill Gallente Battlecruiser needs 3 has 0
ship                           = skill Drones needs 5 has 0
ship                           = skill Jump Drive Operation needs 5 has 0
ship                           = skill Gallente Cruiser needs 3 has 0
ship                           = skill Navigation needs 5 has 0
ship                           = skill Warp Drive Operation needs 5 has 0
ship                           = skill Science needs 5 has 0
ship                           = skill Gallente Destroyer needs 3 has 0
ship                           = skill Gallente Frigate needs 3 has 0
high_1/Fighter Support Unit II = skill Fighter Hangar Management needs 4 has 0
high_1/Fighter Support Unit II = skill Fighters needs 1 has 0
high_1/Fighter Support Unit II = skill Drone Interfacing needs 5 has 0
high_1/Fighter Support Unit II = skill Leadership needs 5 has 0
high_1/Fighter Support Unit II = skill Drones needs 5 has 0
fightertube_1/Dromi II         = skill Support Fighters needs 4 has 0
fightertube_1/Dromi II         = skill Fighters needs 5 has 0
fightertube_1/Dromi II         = skill Drone Interfacing needs 5 has 0
fightertube_1/Dromi II         = skill Leadership needs 5 has 0
fightertube_1/Dromi II         = skill Drones needs 5 has 0
fightertube_2/Templar II       = skill Light Fighters needs 4 has 0
fightertube_2/Templar II       = skill Fighters needs 5 has 0
fightertube_2/Templar II       = skill Amarr Fighter Specialization needs 1 has 0
fightertube_2/Templar II       = skill Drone Interfacing needs 5 has 0
fightertube_2/Templar II       = skill Leadership needs 5 has 0
fightertube_2/Templar II       = skill Drones needs 5 has 0
